# rust-toy-os

./: .gitignore  Cargo.toml  README.md  cargo_fix.sh  cargo_fmt.sh  credits.txt  dump_image_bytes.py  dump_pe.py  export_fontmap.py  html_data.txt  make.py  make_charmap.py  make_font.py  requirement.txt  run.sh  rust-toy-os.code-workspace  server.py  setup_host_tap.sh  test_evdev.py  todo.txt
applib/: Cargo.toml
applib/src/: content.rs  drawing.rs  geometry.rs  hash.rs  input.rs  keymap.rs  lib.rs  stylesheet.rs  ui.rs
applib/src/drawing/: mod.rs  primitives.rs  text.rs
applib/src/input/: keymap.rs  mod.rs
applib/src/ui/: button.rs  mod.rs  progress_bar.rs  scrollable_canvas.rs  text.rs
applib/src/uitk/: button.rs  content.rs  dyn_scrollable_canvas.rs  mod.rs  progress_bar.rs  scrollable_canvas.rs  static_canvas.rs  text.rs
applib/src/uitk/widgets/: button.rs  choice_buttons.rs  dynamic_canvas.rs  editable_text.rs  graph.rs  horiz_bar.rs  mod.rs  progress_bar.rs  scrollable_text.rs  section.rs  static_canvas.rs  text_box.rs  tooltip.rs
apps/chronometer/: Cargo.toml  x86-unknown-baremetal.json
apps/chronometer/src/: main.rs
apps/cube_3d/: Cargo.toml
apps/cube_3d/.cargo/: config.toml
apps/cube_3d/src/: main.rs
guestlib/: Cargo.toml
guestlib/src/: lib.rs
icons/: credits.json
kernel/: Cargo.toml
kernel/src/: allocator.rs  app.rs  http.rs  http_client.rs  logging.rs  loopback.rs  main.rs  memory.rs  pci.rs  resources.rs  serial.rs  shell.rs  smoltcp_demo.rs  smoltcp_virtio.rs  stats.rs  system.rs  time.rs  tls.rs  topbar.rs  wasm.rs  wasmi_test.rs
kernel/src/network/: device.rs  mod.rs
kernel/src/virtio/: gpu.rs  input.rs  mod.rs  network.rs
kernel/src/wasm/: mod.rs
kernel/wasm/: README.md
src/: interrupts.rs  main.rs
src/virtio/: gpu.rs  input.rs  mod.rs
uefi_firmware/: README.md  code.fd
wasm_apps/chronometer/: Cargo.toml
wasm_apps/chronometer/src/: drawing.rs  lib.rs  main.rs
wasm_apps/cube_3d/: Cargo.toml
wasm_apps/cube_3d/src/: drawing.rs  main.rs
wasm_apps/demo/: Cargo.toml  rust-toolchain
wasm_apps/demo/src/: main.rs
wasm_apps/terminal/: Cargo.toml  rust-toolchain
wasm_apps/terminal/.cargo/: config.toml
wasm_apps/terminal/src/: main.rs  prelude.py  python.rs
wasm_apps/text_editor/: Cargo.toml
wasm_apps/text_editor/src/: main.rs
wasm_apps/wasm-test/: Cargo.toml
wasm_apps/wasm-test/src/: drawing.rs  lib.rs
wasm_apps/web_browser/: Cargo.toml
wasm_apps/web_browser/src/: dns.rs  errors.rs  html_parsing.rs  main.rs  render.rs  socket.rs  tls.rs
wasm_apps/web_browser/src/html/: block_layout.rs  canvas.rs  layout.rs  mod.rs  parsing.rs  render.rs  render_list.rs  tree.rs
