[package]
name = "applib"
version = "0.1.0"
edition = "2021"

[dependencies]
enumn = "0.1.12"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
lto = true
strip = true 
codegen-units = 1

[lib]
name = "applib"
test = false
bench = false
