[package]
name = "applib"
version = "0.1.0"
edition = "2021"

[dependencies]
enumn = "0.1.12"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = { version = "0.4.20", default-features = false }
zune-png = { version = "0.4.0", default-features = false }

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
lto = true
strip = true 
codegen-units = 1

[lib]
name = "applib"
test = false
bench = false
