[package]
name = "guestlib"
version = "0.1.0"
edition = "2021"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
lto = true
strip = true 
codegen-units = 1

[lib]
name = "guestlib"
test = false
bench = false

[dependencies]
wee_alloc = "0.4.5"
applib = { path = "../applib" }
