[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.15.0", default-features = false }
log = { version = "0.4.11", default-features = false }
uart_16550 = "0.2.0"
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
x86_64 = "0.14.2"
linked_list_allocator = "0.9.0"
bitvec = { version = "1", features = ["alloc"], default-features = false }
volatile = "0.4"
pic8259 = "0.10.1"
applib = { path = "../applib" }
smoltcp = { version = "0.10.0", default-features = false, features = ["log", "proto-ipv4", "socket-tcp", "medium-ethernet", "alloc"] }
