[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.25.0", default-features = false }
log = { version = "0.4.20", default-features = false }
uart_16550 = "0.2.0"
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
x86_64 = "0.14.2"
#linked_list_allocator = "0.9.0"
bitvec = { version = "1", features = ["alloc"], default-features = false }
volatile = "0.4"
pic8259 = "0.10.1"
applib = { path = "../applib" }
smoltcp = { version = "0.10.0", default-features = false, features = ["log", "proto-ipv4", "socket-tcp", "medium-ethernet", "alloc"] }
enumn = "0.1.12"
wasmi = { version = "0.38.0", default-features = false }
anyhow = { version = "1.0.86", default-features = false }
chrono = { version = "0.4.35", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
tinyvec = { version = "1.8.0", default-features = false, features = ["rustc_1_55", "rustc_1_61"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

[[bin]]
name = "kernel"
test = false
bench = false
