[package]
name = "chronometer"
version = "0.1.0"
edition = "2021"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
lto = true
strip = true 
codegen-units = 1

[dependencies]
uart_16550 = "0.2.18"
micromath = "2.0.0"
