[package]
name = "chronometer"
version = "0.1.0"
edition = "2021"

[dependencies]
wee_alloc = "0.4.5"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
applib = { path = "../../applib" }

# To avoid error about missing tests
[[bin]]
name = "chronometer"
test = false
bench = false

[profile.release]
panic = 'abort'
