[package]
name = "chronometer"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
applib = { path = "../../applib" }
guestlib = { path = "../../guestlib" }

# To avoid error about missing tests
[[bin]]
name = "chronometer"
test = false
bench = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
