[package]
name = "cube_3d"
version = "0.1.0"
edition = "2021"

[dependencies]
wee_alloc = "0.4.5"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
applib = { path = "../../applib" }
guestlib = { path = "../../guestlib" }
log = { version = "0.4.20", default-features = false }

# To avoid error about missing tests
[[bin]]
name = "cube_3d"
test = false
bench = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
