[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
applib = { path = "../../applib" }
guestlib = { path = "../../guestlib" }

# To avoid error about missing tests
[[bin]]
name = "demo"
test = false
bench = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
