[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
applib = { path = "../../applib" }
guestlib = { path = "../../guestlib" }

[dependencies.rustpython]
git = "https://github.com/RustPython/RustPython"
rev = "3eda1cf3b4a29eb35c30f2a3ed272771c642c065"
features = [ "freeze-stdlib" ]

# To avoid error about missing tests
[[bin]]
name = "terminal"
test = false
bench = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
