[package]
name = "wasm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "0.4.5"
applib = { path = "../../applib" }

[lib]
crate-type = ["cdylib"]
test = false
bench = false

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
