[package]
name = "web_browser"
version = "0.1.0"
edition = "2021"

[dependencies]
applib = { path = "../../applib" }
guestlib = { path = "../../guestlib" }
rustls = { version = "0.23.1", default-features = false, features = ["ring", "tls12", "std"]}
webpki-roots = "0.26"
html_parser = "0.7.0"
html-escape = "0.2.13"
hex = "0.4.3"

# To avoid error about missing tests
[[bin]]
name = "web_browser"
test = false
bench = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
