[package]
name = "web_browser"
version = "0.1.0"
edition = "2021"

[dependencies]
applib = { path = "../../applib" }
guestlib = { path = "../../guestlib" }
rustls = { version = "0.23.1", default-features = false, features = ["ring", "tls12", "std"]}
webpki-roots = "0.26"
hex = "0.4.3"
scraper = "0.19.0"
ego-tree = "0.6.2"

# To avoid error about missing tests
[[bin]]
name = "web_browser"
test = false
bench = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
